fixes issue with returned movies div, adds overflow: auto in css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
  /*Home page*/ 
 
+
+
 .homepage {
   background-color: #456990;
   margin: 0;
@@ -207,6 +209,10 @@ svg {
   /*white-space: nowrap;*/
   font-size: 1.2vw;
   height: 20px;
+}
+
+#returned-movies {
+  overflow: auto;
 }
 
 .login-form {
